统一实证留存术语

--- a/Essays/我们如何才能开发出变革性的思想工具？.md
+++ b/Essays/我们如何才能开发出变革性的思想工具？.md
@@ -116,21 +116,21 @@ This takes advantage of a fundamental fact about human memory: as we are repeate
 
 Although it’s early days for *Quantum Country* we can begin to see some of the impact of the mnemonic medium. Plotted below is the demonstrated retention of answers for each user, versus the number of times each question in the mnemonic essay has been reviewed:
 
-尽管量子国度尚处于早期阶段，但我们已经能看到一些助记媒介产生的影响。下图是助记文章中每个用户回答的证实留存与每个问题的复习次数的散点图：
+尽管量子国度尚处于早期阶段，但我们已经能看到一些助记媒介产生的影响。下图是助记文章中每个用户回答的实证留存与每个问题的复习次数的散点图：
 
 ![Graph depicting exponentially-rising demonstranted retention](https://numinous.productions/ttft/assets/dem_retention-2x.png)
 
 The graph takes a little unpacking to explain. By a card’s “demonstrated retention” we mean the maximum time between a successful review of that card, and the prior review of that card. A little more concretely, consider repetition number 6, say (on the horizontal axis). At the point, a user has reviewed all 112 questions in the essay 6 times. And the vertical axis shows the total demonstrated retention, summed across all cards, with each blue dot representing a single user who has reached repetition 6.
 
-这张图需要稍微解释一下。图中纵轴的卡片「证实留存天数」是指正确回答该问题与上一次回答该问题之间的最长时间。具体来说，考虑一下横轴上的数字 6。在这一点上的用户都已经复习了文章中所有的 112 张卡片 6 次。纵轴显示的是所有卡片的证实留存天数，每个蓝点代表一个复习了 6 次的用户。
+这张图需要稍微解释一下。图中纵轴的卡片「实证留存天数」是指正确回答该问题与上一次回答该问题之间的最长时间。具体来说，考虑一下横轴上的数字 6。在这一点上的用户都已经复习了文章中所有的 112 张卡片 6 次。纵轴显示的是所有卡片的实证留存天数，每个蓝点代表一个复习了 6 次的用户。
 
 So, for instance, after 6 repetitions, we see from the graph that most users are up around 6,000 days of demonstrated retention. That means an average of about 6,000 / 112 ~ 54 days per question in the essay. Intuitively, that seems pretty good – if you’re anything like us, a couple of months after reading something you have only a hazy memory. By contrast, these users have, at low time cost to themselves (of which more below), achieved nearly two months of demonstrated retention across 112 detailed questions.
 
-因此，举例来说，经过 6 次复习，大多数用户的总证实留存天数达到了 6000 天左右。也就是说，平均一下，文章中的每个问题都保留了 54 天。直观来看这个效果很好——如果你只是和大多数人一样，那么在读过一些东西之后的几个月，你只能留有一个模糊的记忆。相比之下，这些用户以较低的时间成本（详见下文），在 112 个细节性问题上实现了近两个月的已证实留存。
+因此，举例来说，经过 6 次复习，大多数用户的总实证留存天数达到了 6000 天左右。也就是说，平均一下，文章中的每个问题都保留了 54 天。直观来看这个效果很好——如果你只是和大多数人一样，那么在读过一些东西之后的几个月，你只能留有一个模糊的记忆。相比之下，这些用户以较低的时间成本（详见下文），在 112 个细节性问题上实现了近两个月的已实证留存。
 
 Furthermore, you can see the exponential rise in retention with the number of times cards have been reviewed. After the first review, users typically have an average of just over 2 days of demonstrated retention, per card[^7]. But by the sixth review that rises to an average of 54 days of demonstrated retention. That typically takes about 95 minutes of total review time to achieve. Given that the essay takes about 4 or so hours to read, this suggests that a less than 50% overhead in time commitment can provide many months or years of retention for almost all the important details in the essay.
 
-此外，你可以看到保留天数随着卡片的复习次数呈指数上升。在第一次复习后，平均每张卡，用户通常都有超过 2 天的实证保留天数。[^7]但复习了 6 次之后，这个数字就上升到了 54 天。把所有卡片复习六次大约共需要 85 分钟，考虑到阅读这篇文章需要4个小时左右的时间，这就表明只需不到50%的时间投入可以把文章中几乎所有的重要细节记住几个月甚至几年。
+此外，你可以看到保留天数随着卡片的复习次数呈指数上升。在第一次复习后，平均每张卡，用户通常都有超过 2 天的实证留存天数。[^7]但复习了 6 次之后，这个数字就上升到了 54 天。把所有卡片复习六次大约共需要 85 分钟，考虑到阅读这篇文章需要4个小时左右的时间，这就表明只需不到 50% 的时间投入可以把文章中几乎所有的重要细节记住几个月甚至几年。
 
 This is the big, counterintuitive advantage of spaced repetition: you get exponential returns for increased effort. On average, every extra minute of effort spent in review provides more and more benefit. This is in sharp contrast with most experiences in life, where we run into diminishing returns. For instance, ordinarily if you increase the amount of time you spend reading by 50%, you expect to get no more than 50% extra out of it, and possibly much less. But with the mnemonic medium when you increase the amount of time you spend reading by 50%, you may get 10x as much out of it. Of course, we don’t quite mean those numbers literally. But it does convey the key idea of getting a strongly non-linear return. It’s a change in the quality of the medium.
 
@@ -170,7 +170,7 @@ Another user, new to quantum computing, told us that *Quantum Country* “is by 
 
 Site analytics show a constant flow of people steadily working through the review sessions in the manner we intended. Six months after release of the prototype, 195 users had demonstrated one full month of retention on at least 80% of cards in the essay, demonstrating an extraordinary level of commitment to the process[^9]. We don’t yet have a good model of exactly what those people are learning, but it seems plausible they are taking away considerably more than from a conventional essay, or perhaps even from a conventional class.
 
-网站分析显示，有源源不断的人按照我们预期的方式持续稳定地完成复习周期。原型发布 6 个月后，195 名用户对文章中至少 80% 的卡片都有整整一个月的证实留存天数，有力地证明了这一过程的有效性。[^9] 我们还没有一个比较好的模型来说明这些人到底学到了什么，但很可能相比从传统的文章，甚至是传统的课堂上，他们学到了更多的东西。
+网站分析显示，有源源不断的人按照我们预期的方式持续稳定地完成复习周期。原型发布 6 个月后，195 名用户对文章中至少 80% 的卡片都有整整一个月的实证留存天数，有力地证明了这一过程的有效性。[^9] 我们还没有一个比较好的模型来说明这些人到底学到了什么，但很可能相比从传统的文章，甚至是传统的课堂上，他们学到了更多的东西。
 
 Of course, this kind of feedback and these kinds of results should be taken with a grain of salt. The mnemonic medium is in its early days, has many deficiencies, and needs improvement in many ways (of which more soon). It is, however, encouraging to hear that some users already find the medium exceptionally helpful, and suggests developing and testing the medium further. At a minimum, it seems likely the mnemonic medium is genuinely helping people remember. And furthermore it has the exponentially increasing efficiency described above: the more people study, the more benefit they get per minute studied.
 
