--- a/Essays/我们如何才能开发出变革性的思想工具？.md
+++ b/Essays/我们如何才能开发出变革性的思想工具？.md
@@ -541,15 +541,15 @@ Doing this is a cultural struggle. It seems to be extraordinarily rare to find t
 
 Of course, we’ve got a long way to go with *Quantum Country*. It’s not yet generating nearly deep enough ideas about memory and cognition; it’s not yet one of the world’s foremost memory laboratories. And considered as a product, it’s also in the very earliest days; we’re not yet iterating nearly fast enough, nor learning nearly fast enough from the system. Getting the insight-through-making loop to operate at full throttle will mean reinventing parts of both research culture and conventional product development culture; it will mean new norms and a new type of person involved in key decision making. But that’s the aspiration, and what we believe is necessary to develop transformative tools for thought.
 
-当然，我们在*量子国度*还有很长的路要走。它还没有产生关于记忆和认知的足够深入的想法；它还不是世界上最重要的记忆实验室之一。作为一个产品，它还处于最初的阶段；我们的迭代速度还不够快，从系统中的学习速度也不够快。 但这是一个愿望，也是我们认为开发变革性思想工具所必需的。
+当然，我们在*量子国度*还有很长的路要走。它还没有产生足够深入的、关于记忆和认知的想法；它还不是世界上最重要的记忆实验室之一。作为一个产品，它还处于最初的阶段；我们的迭代速度还不够快，从系统中的学习速度也不够快。但这是一个愿望，也是我们认为开发变革性思想工具所必需的。
 
 # Part II: Exploring tools for thought more broadly
 
-# 第二部分：更广泛地探索思想的工具
+# 第二部分：更广泛地探索思想工具
 
 We’ve examined the mnemonic medium in some depth. The intent was to show you the early stages in the development of a specific tool for thought, and some of the thinking enabled by that development. In this second part of the essay we explore more broadly, briefly sketching ideas for several other tools for thought. And we’ll address some broader questions, especially around why there hasn’t been more work on tools for thought.
 
-我们已经比较深入地研究了助记媒介，来展现思想工具发展的初期历程，以及从中引发的一些思考。在本文第二部分，我们将拓宽视野，简述其他思想工具的灵感@f，并讨论一些延伸问题，其中思想工具发展的停滞是一个焦点。
+我们已经比较深入地研究了助记媒介，来展现思想工具发展的初期历程，以及从中引发的一些思考。在本文的第二部分，我们将拓宽视野，简述其他思想工具的理念，并讨论一些延伸问题，其中思想工具发展的停滞是一个焦点。
 
 ## Mnemonic video
 
@@ -557,7 +557,7 @@ We’ve examined the mnemonic medium in some depth. The intent was to show you t
 
 In 2014, the digital artist Eric Wernquist released an extraordinary short video entitled “[Wanderers](https://vimeo.com/108650530)”. The video provides a first-person glimpse of what it would be like to explore the Solar System:
 
-2014 年，数字艺术家 Eric Wernquist 发布了一条令人惊奇的短小视频，题为「[流浪者](https://vimeo.com/108650530)」。该视频以第一人称视角带领观众领略探索太阳系是什么感受。
+2014 年，数字艺术家 Eric Wernquist 发布了一条令人惊奇的短视频，题为「[流浪者](https://vimeo.com/108650530)」。该视频以第一人称视角带领观众领略探索太阳系的感受。
 
 <iframe src="https://player.vimeo.com/video/108650530?color=ffffff&amp;title=0&amp;byline=0&amp;portrait=0&amp;badge=0" frameborder="0" allow="autoplay;
 			fullscreen" allowfullscreen="" style="margin: 0px; padding: 0px; border: 0px; outline: 0px; background: transparent; box-sizing: border-box; width: 748px; height: calc(var(--width) / var(--aspect-ratio)); --aspect-ratio: 2.353;"></iframe>
@@ -565,7 +565,7 @@ In 2014, the digital artist Eric Wernquist released an extraordinary short video
 
 We hear the narrator’s (Carl Sagan) wonder and awe, and cannot help but empathize with his deep belief in the value of exploration. We get a sense of how many mysteries and how much beauty there is in our own cosmic neighborhood. The music begins with a wistful nostalgia for those of our ancestors who dared to explore, and then changes to convey excitement and danger and the boldness of those members of our and future generations who continue that exploration.
 
-在旁白（Carl Sagan 出演）频频称奇，屡屡惊叹时，作者对探索价值的执着渐渐让观众感同身受。观众开始感受到，这颗星球的周围，有重重谜团林立，有壮丽美景锦簇。视频的音乐则带以略显伤感的怀旧风格开头，似乎在纪念勇于探索的人类先祖，随后变调，描绘我们和未来的人，继续未竟的探索，大胆向前，挑战危机，拥抱激情。
+在旁白（Carl Sagan 担任）频频称奇，屡屡惊叹时，作者对探索价值的执着渐渐让观众感同身受。观众开始感受到，在这颗星球的周围，有重重谜团林立，有壮丽美景锦簇。视频的音乐则带以略显伤感的怀旧风格开头，似乎在纪念勇于探索的人类先祖，随后变调，描绘我们和未来的人，继续未竟的探索，大胆向前，挑战危机，拥抱激情。
 
 It’s interesting to contrast the video to the video’s script, a short text by Carl Sagan. The [text](http://mentalfloss.com/article/60335/wanderers-glimpse-humanitys-possible-future) is beautiful, but reading it is a much more remote and cerebral experience, conveying a much less visceral emotional understanding.
 
@@ -581,15 +581,15 @@ We have a friend, Grant Sanderson, who makes astonishing mathematics videos on h
 
 As with *Wanderers*, watching this video is a remarkable emotional experience. It’s obvious the person narrating the video loves mathematics, and you cannot help but empathize. As you watch, you experience repeated “Ahah!” moments, moments of surprising insight, as connections that were formerly invisible become obvious. It shows mathematics as something beautiful, containing extraordinary ideas and intriguing mysteries, while at the same time showing that doing mathematics is not mysterious, that it is something anyone can understand and even do.
 
-观看这条视频，和观看上文的《流浪者》一样都是触及人心的情感体验。很显然，视频中主讲者热爱数学，而观众无法不能感同身受。观看时，观众往往反复感叹「啊哈！」，因为隐藏的联系被挖掘出来，他们收获了令人惊喜的洞见。视频中，数学的优美，数学蕴藏的非凡想法，数学潜藏的有趣谜团尽数展现，同时观众又感到做数学并不神秘，所有人都能理解数学，甚至参与其中。
+观看这条视频，和观看上文的《流浪者》一样都是触及人心的情感体验。很显然，视频中主讲者热爱数学，而观众无不感同身受。观看时，观众往往反复感叹「啊哈！」，因为隐藏的联系被挖掘出来，他们收获了令人惊喜的洞见。视频中，数学的优美，数学蕴藏的非凡想法，数学潜藏的有趣谜团尽数展现，同时观众又感到做数学并不神秘，所有人都能理解数学，甚至参与其中。
 
 It’s tempting to overlook or undervalue this kind of emotional connection to a subject. But it’s the foundation of all effective learning and of all effective action. And it is much easier to create such an emotional connection using video than using text.
 
-这种对知识主题的情感连接很容易被忽视或是被低估，然而它对于所有有效的学习和有效行动@f 都是基础。要建立这种情感连接，视频比文字更容易。
+这种对知识主题的情感联系很容易被忽视或是被低估，然而它是所有有效学习和有效行动的基础。要建立这种情感联系，视频比文字更容易。
 
 There’s a flipside to this emotional connection, however. We’ve often heard people describe Sanderson’s videos as about “teaching mathematics”. But in conversation he’s told us he doesn’t think more than a small fraction of viewers are taking away much detailed understanding of mathematics. We suspect this is generally true, that high affect videos usually do little to change people’s detailed intellectual understanding. Rather, the extraordinary value of the videos lies in the emotional connection they create.
 
-然而，这种情感连接也有其反面。我们经常听到有人把认为桑德森的视频在「教数学」。但在一次与他的谈话中，他告诉我们，他认为只有一小部分的人看完视频后能获得不算粗略的数学知识。恐怕这基本是正确的，高影响力的视频通常无法影响人们细致的智力思维。但是，这些视频的非凡价值在于它们创造的情感连接。
+然而，这种情感联系也有其反面。我们经常听到有人认为 Sanderson 的视频在「教数学」。但在一次与他的谈话中，他告诉我们，他认为只有一小部分的人看完视频后能获得不算粗略的数学知识。恐怕这基本是正确的，高影响力的视频通常无法影响人们细致的智力思维。但是，这些视频的非凡价值在于它们创造的情感联系。
 
 Is it possible to create a medium which blends the best qualities of both video and text?
 
@@ -597,11 +597,11 @@ Is it possible to create a medium which blends the best qualities of both video 
 
 In particular, is it possible to create a medium which has the emotional range possible in video – a range which can be used to convey awe and mystery and surprise and beauty? But which can also firmly ground that emotional connection in detailed understanding, the mastery of details which is the raison d’être of both conventional text and, perhaps even moreso, of the mnemonic medium?
 
-具体地说，是否有可能创造如下如一种媒介？它像视频一样，富有情感潜力——可以表达敬畏，奥妙，惊喜，美感的潜力，而它创造的情感联系有细致的知识作为基础。这些知识包含丰富细节，讲述他们也是普通文本，甚至是助记媒介的目的。
+具体地说，是否有可能创造如下如一种媒介？它像视频一样，富有情感潜力——可以表达敬畏、奥妙、惊喜、美感的潜力，而它创造的情感联系有细致的知识作为基础。这些知识包含丰富细节，讲述他们也是普通文本，甚至是助记媒介的目的。
 
 We believe this may be possible, and we plan to develop a *mnemonic video* form that provides both the emotional connection possible in video, and the mastery of details possible in the mnemonic medium.
 
-我们相信这是可能的，我们计划开发一种「助记视频」，既提供视频中的情感连接，又提供助记媒介中的丰富细节。
+我们相信这是可能的，我们计划开发一种「助记视频」，既提供视频中的情感联系，又提供助记媒介中的丰富细节。
 
 Creating such a form is challenging. Many MOOC platforms have attempted something a little in this vein. The typical approach is to have a low-affect talking head video, with the videos interrupted occasionally for brief quizzes[^26]. Here’s how it works on one MOOC platform, Coursera:
 
@@ -611,19 +611,19 @@ Creating such a form is challenging. Many MOOC platforms have attempted somethin
 
 Other MOOCs differ in the details. But the overall emotional experience may be summed up as:
 
-其他 MOOCs 在细节上有所不同。但其整体的情感体验可以总结为：
+其他慕课在细节上有所不同。但其整体的情感体验可以总结为：
 
 ![Graph highlighting the sharp affective transitions between the lectures and the very low affect questions](https://numinous.productions/ttft/assets/mnemonic_video_edx_graph-2x.png)
 
 The very best parts of the video may be emotionally compelling, though it’s rare that they achieve the emotional range and connection of the best videos from people like Grant Sanderson. And the overall emotional experience is disjointed, almost repellent. Is it possible to create an integrated medium, with a unified and carefully crafted emotional and intellectual experience? Ideally, is it possible to create something like the following?
 
-这些视频中，可能有一些质量高的部分情感上引人入胜，虽说他们也很难像最优秀的视频那样充分发挥情感潜力，构建情感连接，比如 Grant Sanderson 等人的视频。但整体情感体验毫不连贯，令人敬而远之。那么，有没有可能创造一种融合情感与知识的媒介，提供统一而精心打造的情感与智力体验？最理想化的话，是否能创造如下的体验？
+这些视频中，可能有一些高质量的部分在情感上引人入胜，虽说他们也很难像最优秀的视频那样充分发挥情感潜力，构建情感联系，比如 Grant Sanderson 等人的视频。但整体情感体验毫不连贯，令人敬而远之。那么，有没有可能创造一种融合情感与知识的媒介，提供统一而精心打造的情感与智力体验？最理想化的话，是否能创造如下的体验？
 
 ![Hypothetical graph depicting smoother affective transitions and higher overall affect](https://numinous.productions/ttft/assets/mnemonic_video_hypothetical_graph-2x.png)
 
 In MOOCs, questions are typically presented in a very dry form, detached from context. In the mnemonic video the narrator would explain why the questions are important, and why the user will benefit from participating, as a seamless part of the overall narration. Done right – perhaps with appropriate music, and a sense of urgency or play in the narration – it would create a real sense of the stakes. At the same time, the video player can be modified so the user can respond directly to questions, as part of the spaced-repetition experience. The result would be much softer transitions between the high-affect core narration and the moderate-affect questions.
 
-@d 在慕课平台中，问题通常脱离了上下文，显得很枯燥。但是在助记视频中，叙述者会解释所研究的问题为何重要，为什么用户看完视频会受益，这些内容都融入在整体叙述中。做得好的话——比如配有合适的音乐，语调适当地急促或调皮——它将让观者感到迫切相关。同时可以调整视频播放器，以便用户直接回答问题@d ，作为间隔重复体验的一部分@d。如此改造便能让在情感充沛的主要叙述和情感中性的问题之间的过渡会柔和得多。
+在慕课平台中，问题通常脱离了上下文，显得很枯燥。但是在助记视频中，叙述者会解释所研究的问题为何重要，为什么用户看完视频会受益，这些内容都融入在整体叙述中。做得好的话——比如配有合适的音乐，语调适当地急促或调皮——它将让观者感到迫切相关。同时可以调整视频播放器，以便用户直接回答问题，作为间隔重复体验的一部分。如此改造便能让在情感充沛的主要叙述和情感中性的问题之间的过渡会柔和得多。
 
 Here’s a short sketch of one approach to doing this[^27], showing how the narrator could ask questions aloud as an integrated part of the overall narration:
 
@@ -637,7 +637,7 @@ Here’s a short sketch of one approach to doing this[^27], showing how the narr
 
 It seems likely that the rhythm of mnemonic videos would be quite different to mnemonic essays. In particularly, the frequency and density of questions would be lower than in the mnemonic medium, and it would be necessary to test different beats and cadences to ensure a good balance of emotional and intellectual experience. Even high-affect video typically has quieter moments; it achieves the high affect in part by contrast to the lower-intensity moments. Think about the way a good action movie or thriller needs lulls; if it’s too high-intensity all the time, eventually our emotional response is dulled. We could design mnemonic video so the questions help fill this lower-intensity emotional beat.
 
-助记视频的节奏很可能与助记文章大不相同，尤其是问题的频率和密度会比助记媒介低。与此同时，有必要测试不同的节拍和节奏，以平衡情感和智力体验。情感充沛的视频通常也有比较平静的时刻；他们之所以能有效激发情感，一部分是因为有这些低情感强度的时刻作对比。想一想，一部好的动作电影或惊悚片也有些平淡片段。内容一直都是高情感强度的话，观众的情感反馈也会减弱。设计助记视频时，可以让其中的问题充当低情感强度的节拍。@d
+助记视频的节奏很可能与助记文章大不相同，尤其是问题的频率和密度会比助记媒介低。与此同时，有必要测试不同的节拍和节奏，以平衡情感和智力体验。情感充沛的视频通常也有比较平静的时刻；他们之所以能有效激发情感，一部分是因为有这些低情感强度的时刻作对比。想一想，一部好的动作电影或惊悚片也有些平淡片段。内容一直都是高情感强度的话，观众的情感反馈也会减弱。设计助记视频时，可以让其中的问题充当低情感强度的节拍。
 
 Of course, this is merely a quick sketch of one approach to the design of mnemonic video. Ideally, there would also be a spaced-repetition component, perhaps with the questions asked in text instead of video. This sort of sketch seems to us a promising direction, but needs considerable development and intense testing. In particular, we need to do detailed, second-by-second user experience testing, to understand and shape users’ emotional and intellectual experience. That would continue until we were confident that our target users were having the desired experience. Ideally, we’d also generate several more very different designs, and try to understand how each approach would impact the user’s emotional and intellectual experience.
 
@@ -645,15 +645,15 @@ Of course, this is merely a quick sketch of one approach to the design of mnemon
 
 The broader point here is about taking emotion seriously. Historically, a lot of work on tools for thought has either ignored emotion, or treated it as no more than a secondary concern. Instead, that work has focused on new skills acquired, on what the user “learns”. They’ve been designing for Spock, when emotional connection is a high-order bit. Do users feel disinterested? Afraid? Hostile? Anxious? Or do they internalize a sense of excitement, of beauty, perhaps even an expansion in their own goals, an expansion of their self?
 
-此处讨论的上位主题是软件是否认真对待用户情感。历史上，很多思想工具软件@d 要么忽略了情感，要么把它当作次要问题。相反，这些工作都专心于让用户习得新技能，让用户「学到」什么。他们似乎是为一个没有情感的木头人设计，全然不顾满足情感联系这一更高阶的需求。用户们是不是没兴趣？害怕？充满敌意？焦虑？还是他们从内而外地感到激动，感到美学享受，甚至感到目标被延伸，自我得到发展？
+此处讨论的上位主题是软件是否认真对待用户情感。历史上，很多思想工具软件要么忽略了情感，要么把它当作次要问题。相反，这些工作都专心于让用户习得新技能，让用户「学到」什么。他们似乎是为一个没有情感的木头人设计，全然不顾满足情感联系这一更高阶的需求。用户们是不是没兴趣？害怕？充满敌意？焦虑？还是他们从内而外地感到激动，感到美学享受，甚至感到目标被延伸，自我得到发展？
 
 By contrast, media forms such as movies and music and (often) video games do take emotion seriously. The designers of such forms often have incredibly elaborate models of user’s emotional responses. These models range from detailed, second-by-second understanding, to deep thinking about a user’s overall emotional journey. We believe it’s possible and desirable to use such approaches in the development of tools for thought.
 
-相比之下，电影、音乐和（通常）电子游戏等媒介是认真对待情感的。这类媒介的设计者@d往往对用户的情绪反馈进行了十分精巧的建模，小到对用户情感逐秒变化的丰富理解，大到对用户整体情感历程的深入考虑。在思想工具的开发中使用这种方法是可行的，也是可取的。
+相比之下，电影、音乐和（通常）电子游戏等媒介是认真对待情感的。这类媒介的设计者往往对用户的情绪反馈进行了十分精巧的建模，小到对用户情感逐秒变化的丰富理解，大到对用户整体情感历程的深入考虑。在思想工具的开发中使用这种方法是可行的，也是可取的。
 
 At the same time, a positive emotional experience alone is not enough. For tools for thought to attain enduring power, the user must experience a real growth in mastery, an expansion in their ability to act. And so we’d like to take both the emotional and intellectual experience of tools for thought seriously. Mnemonic video is a good venue for such exploration. To paraphrase Einstein, attaining a detailed understanding without forming an emotional connection is lame; while forming an emotional connection without detailed understanding has no enduring power.
 
-于此同时，仅有积极的情感体验是不够的。为了让思想工具激发持久力量，在使用工具后，用户需要切实掌握更多知识，提升决策与行动能力@d。因此，思想工具的情感和智力体验必须同样认真对待。为了探究这两者的处理方式，助记视频便能派上用场。用爱因斯坦的话说，没有丰富知识，空有情感连接；没有情感连接，空有丰富知识，
+与此同时，仅有积极的情感体验是不够的。为了让思想工具激发持久力量，在使用工具后，用户需要切实掌握更多知识，提升决策与行动能力。因此，思想工具的情感和智力体验必须同样认真对待。为了探究这两者的处理方式，助记视频便能派上用场。用爱因斯坦的话说，没有情感联系充实的丰富知识是平淡无趣的；没有丰富知识依托的情感联系是转瞬即逝的。
 
 ## Why isn’t there more work on tools for thought today?
 
@@ -661,7 +661,7 @@ At the same time, a positive emotional experience alone is not enough. For tools
 
 If tools for thought are so great, why isn’t more work being done on them? Why aren’t they a major industry?
 
-既然思想工具威力巨大，那为什么他们的发展停滞了？为什么思想工具没有形成一块重要领域？@d
+既然思想工具威力巨大，那为什么他们的发展停滞了？为什么思想工具没有形成一个重要行业？
 
 As noted in the introduction, there’s certainly a lot of lip service paid. It is, for instance, common to hear technologists allude to Steve Jobs’s metaphor of computers as “bicycles for the mind”. But in practice it’s rarely more than lip service. Many pioneers of computing have been deeply disappointed in the limited use of computers as tools to improve human cognition. Douglas Engelbart [disparaged](http://dougengelbart.org/content/view/348/000/) the “dangerous, disappointing, narrow, path that we seem to be stuck with following”. When asked in 2006 how much of his vision had been achieved, Engelbart replied facetiously [“about 2.8 percent”](https://www.smithsonianmag.com/innovation/douglas-engelbart-invented-future-180967498/). Alan Kay gives talks asserting [“The real computer revolution hasn’t happened yet”](http://www.vpri.org/pdf/m2007007a_revolution.pdf) and in [an interview](https://www.fastcompany.com/40435064/what-alan-kay-thinks-about-the-iphone-and-technology-now) has described the modern web as “reinventing the flat tire… at least give us what Engelbart did, for Christ’s sake.”
 
@@ -669,11 +669,11 @@ As noted in the introduction, there’s certainly a lot of lip service paid. It 
 
 Our experience is that many of today’s technology leaders genuinely venerate Engelbart, Kay, and their colleagues. Many even feel that computers have huge potential as tools for improving human thinking. But they don’t see how to build good businesses around developing new tools for thought. And without such business opportunities, work languishes.
 
-我们认为，今天的许多技术领袖发自内心崇敬 Engelbart、Kay 和他们的同事。许多人甚至觉得计算机作为改善人类思维的工具有着巨大的潜力。但他们看不出开发新的思想工具怎么撑得起一家公司。没有商业机会，发展就会停滞不前。
+我们认为，今天的许多技术领袖发自内心崇敬 Engelbart、Kay 和他们的同事。许多人甚至觉得计算机作为改善人类思维的工具有着巨大的潜力。但他们看不出开发新的思想工具该怎么撑起一家公司。没有商业机会，发展就会停滞不前。
 
 What makes it difficult to build companies that develop tools for thought? To answer this, consider Adobe, one of the few large companies serious about developing new tools for thought[^28]. It’s poured money into developing new mediums[^29] for designers and artists – programs such as *Illustrator*, *Photoshop*, and so on. These mediums are remarkable tools for thought.
 
-什么因素让建立公司开发思想工具那么难？为了回答这个问题，想一想 Adobe 公司，这家算是少数认真开发新思想工具[^28]的大公司。它把钱投入到开发新的媒介[^29]上——如 Illustrator*，*Photoshop *等等*。对于设计师和艺术家来说，这些媒介是了不起的思想工具。@d
+什么因素让建立公司开发思想工具那么难？为了回答这个问题，想一想 Adobe 公司，这家算是少数认真开发新思想工具[^28]的大公司。它把钱投入到开发新的媒介[^29]上——如 *Illustrator*，*Photoshop* 等等。对于设计师和艺术家来说，这些媒介是了不起的思想工具。
 
 Unfortunately for Adobe, such mediums are extremely expensive to develop, and it’s difficult to prevent other companies from cheaply copying the ideas or developing near-equivalents. Consider, for example, the way the program *Sketch* has eaten into Adobe’s market share, after duplicating many of the best features from several of Adobe’s products, perhaps most notably *Illustrator*. And consider the way *Figma* is now eating into both *Sketch* and *Illustrator*’s market share. Both *Sketch* and *Figma* have done this without needing to make an enormous investment in research. That’s a big advantage they have over Adobe.
 
@@ -685,7 +685,7 @@ Marc Andreessen 观察到[^30]：
 
 > true defensibility purely at the product level is really rare in [Silicon] Valley, because there are a lot of really good engineers… And then there’s the issue of leap-frogging. The next team has the opportunity to learn from what you did and then build something better.
 
->  纯粹凭产品建立的护城河在[硅]谷真的很罕见，因为硅谷里优秀的工程师太多了......然后还有跨越式发展的问题。其他团队有机会从你的工作中学习，然后开发更好的东西。
+> 纯粹凭产品建立的护城河在[硅]谷真的很罕见，因为硅谷里优秀的工程师太多了......然后还有跨越式发展的问题。其他团队有机会从你的工作中学习，然后开发更好的东西。
 
 Put another way, many tools for thought are public goods. They often cost a lot to develop initially, but it’s easy for others to duplicate and improve on them, free riding on the initial investment. While such duplication and improvement is good for our society as a whole, it’s bad for the companies that make that initial investment. And so such tools for thought suffer the fate of many public goods: our society collectively underinvests in them, relative to the benefits they provide[^31].
 
@@ -693,27 +693,27 @@ Put another way, many tools for thought are public goods. They often cost a lot 
 
 Earlier, we argued that modern design practice generally isn’t up to the challenge of producing genuinely transformative tools for thought. On the surface, that process-level argument appears very different to the public goods argument we just made. In fact, the process-level explanation is a consequence of the public goods explanation: companies don’t use the necessary processes because there’s little value to them in doing so. By contrast, in “harder-tech” industries – say, chip design – companies have much more incentive to do deep research work. In those industries it’s considerably harder for other companies to duplicate or capture the value of that research.
 
-早些时候，我们认为现代设计方法，在应对生产真正的思想变革工具的挑战上远远不够格。从表面上看，这个过程层面的论点似乎与我们刚才的公共物品论点非常不同。事实上，过程层面的解释@d 是公共物品解释的一个结果：公司不使用必要的过程，因为这样做对他们没有什么价值。相比之下，在"更困难"的技术行业——例如芯片设计——公司做深入研究的动力更足。在这些行业中，其他公司要复制或获取这些研究的价值是相当困难的。
+早些时候，我们认为现代设计方法，在应对生产真正的思想变革工具的挑战上远远不够格。从表面上看，这个过程层面的论点似乎与我们刚才的公共物品论点非常不同。事实上，过程层面的解释是公共物品解释的一个结果：公司不使用必要的过程，因为这样做对他们没有什么价值。相比之下，在「更困难」的技术行业——例如芯片设计——公司做深入研究的动力更足。在这些行业中，其他公司要复制或获取这些研究的价值是相当困难的。
 
 It’s illuminating to contrast with video games. Game companies develop many genuinely new interface ideas. This perhaps seems surprising, since you’d expect such interface ideas to also suffer from the public goods problem: game designers need to invest enormous effort to develop those interface ideas, and they are often immediately copied (and improved on) by other companies, at little cost. In that sense, they are public goods, and enrich the entire video game ecosystem.
 
-对比视频游戏很有启发性。游戏公司开发了许多非常创新的界面创意。这也许令人惊讶，因为你会认为这种界面创意也会受到公共物品问题的影响：游戏设计师需要投入巨大的精力来开发这些界面创意，而这些创意往往会立即被其他公司复制（和改进），而成本忽略不计。在这个意义上，这些创意是公共物品，能够丰富电子游戏的生态系统。
+与电子游戏对比，这很有启发性。游戏公司开发了许多非常创新的界面创意。这也许令人惊讶，因为你会认为这种界面创意也会受到公共物品问题的影响：游戏设计师需要投入巨大的精力来开发这些界面创意，而这些创意往往会立即被其他公司复制（和改进），而成本忽略不计。在这个意义上，这些创意是公共物品，能够丰富电子游戏的生态系统。
 
 But there’s a big difference between video game companies and companies such as Adobe. Many video games make most of their money from the first few months of sales. While other companies can (and do) come in and copy or riff on any new ideas, it often does little to affect revenue from the original game, which has already made most of its money[^32]. While this copying is no doubt irritating for the companies being copied, it’s still worth it for them to make the up-front investment.
 
-@@ 但是，电子游戏公司和 Adobe 等公司之间有很大的区别。许多电子游戏挣钱主要靠前几个月的销售。因此，其他公司的确可以复制或翻版这些包含新想法的游戏，他们也这样做了，但这对原本游戏销售影响不大，因为克隆版发售时，原本游戏大部分钱已经赚回来了[^32]。虽然这种抄袭对被抄袭的公司来说无疑是令人恼火的，但对他们来说，进行前期投资仍然是值得的。@d
+但是，电子游戏公司和 Adobe 等公司之间有很大的区别。许多电子游戏挣钱主要靠前几个月的销售。因此，其他公司的确可以复制或翻版这些包含新想法的游戏，他们也这样做了，但这对原本游戏销售影响不大，因为克隆版发售时，原游戏的大部分钱已经赚回来了[^32]。虽然这种抄袭对被抄袭的公司来说无疑是令人恼火的，但对他们来说，进行前期投资仍然是值得的。
 
 The net result is that in gaming, clever new interface ideas can be distinguishing features which become a game’s primary advantage in the marketplace. Indeed, new interface ideas may even help games become classics – consider the many original (at the time) ideas in games ranging from *Space Invaders* to *Wolfenstein 3D* to *Braid* to *Monument Valley*. As a result, rather than underinvesting, many companies make sizeable investments in developing new interface ideas, even though they then become public goods. In this way the video game industry has largely solved the public goods problems.
 
-从结果上看，游戏界中，聪明而崭新界面创意可以成为有区分度的功能，能够成为游戏的重要市场优势。同样，它们甚至可以助游戏成为经典——想想看，从《太空入侵者》到《狼人杀 3D》再到《纪念碑谷》等游戏中的许多原创（在当时）创意。因此，许多公司并没有缩手，而是对新界面创意的开发慷慨投资，尽管它们最终能被自由取用。通过这种方式，视频游戏行业在很大程度上解决了公共物品属性的难题。
+从结果上看，游戏界中，聪明而崭新界面创意可以成为有区分度的功能，能够成为游戏的重要市场优势。同样，它们甚至可以助游戏成为经典——想想看，从《太空入侵者》到《狼人杀 3D》再到《纪念碑谷》等游戏中的许多原创（在当时）创意。因此，许多公司并没有缩手，而是对新界面创意的开发慷慨投资，尽管它们最终能被自由取用。通过这种方式，电子游戏行业在很大程度上解决了公共物品属性的难题。
 
 By contrast, a company like Adobe builds their business around distribution and long-term lock in. They convince people – indeed, entire organizations – to make long-term commitments to their products. Schools offer classes so people can call themselves “*Photoshop* experts” or “*Illustrator* experts”. Companies designate their design departments as “Adobe shops”. So while Adobe does invest in developing clever new interface ideas (for them, unlike the video game companies, this genuinely means tools for thought), it’s less central to their competitive advantage, and they invest less than they would if it was their central advantage. And Adobe does perhaps as much or more work developing tools for thought as any company.
 
-相比之下，像 Adobe 这样的公司赖以为生的是产品销售，以及被产品长期锁定的用户。他们说服人们——实际上是整个组织——长期使用他们的产品。学校提供「*Photoshop* 专家」或「*Illustrator* 专家」的培训课程来发放令人引以为豪的头衔。公司将其设计部门指定为 「Adobe 商店」。因此，尽管 Adobe 确实在开发聪明的新界面创意投资（对他们来说，与视频游戏公司不同，这真正意味着思考的工具），但这对他们的竞争优势来说并不那么核心，因此投资也会减少，相对于将其作为核心优势的假设情况。然而即便如此，Adobe 公司在开发思想工具方面所做的工作也许和任何公司一样多，甚至更多。
+相比之下，像 Adobe 这样的公司赖以为生的是产品销售，以及被产品长期锁定的用户。他们说服人们——实际上是整个组织——长期使用他们的产品。学校提供「*Photoshop* 专家」或「*Illustrator* 专家」的培训课程来发放令人引以为豪的头衔。公司将其设计部门指定为「Adobe 商店」。因此，尽管 Adobe 确实在开发聪明的新界面创意投资（对他们来说，与视频游戏公司不同，这真正意味着思考的工具），但这对他们的竞争优势来说并不那么核心，因此投资也会减少，相对于将其作为核心优势的假设情况。然而即便如此，Adobe 公司在开发思想工具方面所做的工作也许和任何公司一样多，甚至更多。
 
 It’s encouraging that the video game industry can make inroads on the public goods problem. Is there a solution for tools for thought? Unfortunately, the novelty-based short-term revenue approach of the game industry doesn’t work. You want people to really master the best new tools for thought, developing virtuoso skill, not spend a few dozen hours (as with most games) getting pretty good, and then moving onto something new.
 
-视频游戏行业在公共物品难题上取得的进展是令人鼓舞，但对于思想工具是否有相应的破局之法？不幸的是，对于思想工具，游戏界赚眼球，捞快钱的收入模式并不奏效。我们需要让人们确实掌握最好的新思想工具，发展精湛的技能，而不是花几十个小时（像大多数游戏那样）达到还不错的水平，之后另寻新欢。
+电子游戏行业在公共物品难题上取得的进展是令人鼓舞，但对于思想工具是否有相应的破局之法？不幸的是，对于思想工具，游戏界赚眼球，捞快钱的收入模式并不奏效。我们需要让人们确实掌握最好的新思想工具，发展精湛的技能，而不是花几十个小时（像大多数游戏那样）达到还不错的水平，之后另寻新欢。
 
 Another plausible solution to the public goods problem is patents, granting a temporary monopoly over use of an invention. Many software companies, including Adobe, develop a large patent portfolio. However, the current patent system is not a solution for this problem. In 2017, Dana Rao, Adobe’s Vice President for Intellectual Property and Litigation, posted a [call](https://morningconsult.com/opinions/improving-patents-will-not-kill-innovation/) for major reforms to the patent system, stating that:
 
@@ -765,7 +765,7 @@ There are three important premises we’ve taken for granted up to now. First is
 
 In other words, perhaps the 1960s and 1970s were an unrepeatable golden age, and all we can expect in the future is gradual incremental improvement, and perhaps the occasional major breakthrough, at a decreasing frequency?
 
-换句话说，也许 20 世纪 60 年代和 70 年代是一个不可复制的黄金时代，而未来所能期待的是逐渐的增量式的改进，间或有些有重大突破，但频率会越来越低？
+换句话说，也许 20 世纪 60 年代和 70 年代是一个不可复制的黄金时代，而未来所能期待的是逐渐的渐进式的改进，间或有些有重大突破，但频率会越来越低？
 
 There’s a plausible story suggesting this is true. Tech is an enormous industry, well funded, with many bright, ambitious, talented people. Surely if there were major ideas to discover, people would do so? This argument is reinforced by the fact that, at the individual level, we meet many brilliant people who are fascinated by (and often working on) tools for thought, but who nonetheless seem to be making slow progress.
 
@@ -773,7 +773,7 @@ There’s a plausible story suggesting this is true. Tech is an enormous industr
 
 But while this story has a superficial appeal, it’s misleading. Really difficult problems – problems like inventing Hindu-Arabic numerals – aren’t solved by good intentions and interest alone. A major thing missing is foundational ideas powerful enough to make progress. In the earliest days of a discipline – the proto-disciplinary stage – a few extraordinary people – people like Ivan Sutherland, Doug Engelbart, Alan Kay, and Bret Victor – may be able to make progress. But it’s a very bespoke, individual progress, difficult to help others become proficient in, or to scale out to a community. It’s not yet really a discipline. What’s needed is the development of a powerful praxis, a set of core ideas which are explicit and powerful enough that new people can rapidly assimilate them, and begin to develop their own practice. We’re not yet at that stage with tools for thought. But we believe that we’re not so far away either.
 
-但是，虽然这套逻辑看起来很有吸引力，它却有误导性。真正的难题——像发明印度-阿拉伯数字系统这样的问题——仅靠善意愿望和兴趣使然是不够的。缺失的一块关键拼图是足够强力而有进步性的创意。在每个学科发展的源头，也就是其学科原初阶段——少数非凡的人——像 Ivan Sutherland、Doug Engelbart、Alan Kay 和 Bret Victor 这样的人——可能能够@d 取得进展。但他们的工作有强烈的个人特点，很难让其他人掌握，或发展壮大成为社区。这还不是一门真正的学科。我们需要的是发展一个强大的实践，一套明确而强大的核心理念，使后来者能够迅速吸收，并开始发展自己的实践。思想工具还没有达到这个阶段。但我们相信，我们也不是那么遥远。
+但是，虽然这套逻辑看起来很有吸引力，它却有误导性。真正的难题——像发明印度-阿拉伯数字系统这样的问题——仅靠善意愿望和兴趣使然是不够的。缺失的一块关键拼图是足够强力而有进步性的创意。在每个学科发展的源头，也就是其学科原初阶段——少数非凡的人——像 Ivan Sutherland、Doug Engelbart、Alan Kay 和 Bret Victor 这样的人——可能能够取得进展。但他们的工作有强烈的个人特点，很难让其他人掌握，或发展壮大成为社区。这还不是一门真正的学科。我们需要的是发展一个强大的实践传统，一套明确而强大的核心理念，使后来者能够迅速吸收，并开始发展自己的实践。思想工具还没有达到这个阶段。但我们相信，我们也不是那么遥远。
 
 While that argument is helpful context, it doesn’t address the core point: it doesn’t mean there are a lot of new transformative tools for thought waiting to be discovered. Again: maybe the most important tools for thought have already been discovered?
 
@@ -797,7 +797,7 @@ Part of this question is caused by a confusion in terms. Obviously, many tech co
 
 Still, there are tech companies which really do develop tools for thought. We already discussed some examples where companies have partially or totally avoided the public goods problem, tools such as: Illustrator, Google Search, Twitter, Slack, Google Docs, programmer tools[^33], and so on. All really are significant tools for thought.
 
-尽管如此，还是有一些科技公司确实在开发思想工具。我们已经讨论了一些公司部分或完全避免了公共物品问题的例子，这些工具包括。Illustrator、Google Search、Twitter、Slack、Google Docs、程序员工具[^33]等等。所有这些确实都是重要的思想工具。
+尽管如此，还是有一些科技公司确实在开发思想工具。我们已经讨论了一些公司部分或完全避免了公共物品问题的例子，这些工具包括：Illustrator、Google Search、Twitter、Slack、Google Docs、程序员工具[^33]等等。所有这些确实都是重要的思想工具。
 
 But consider our most fundamental tools for thought – language, writing, music, *etc*. Those are public goods. No-one owns language; to the extent that it is owned (trademarks and so on) it may actually limit the utility of language. These tools are all about introducing fundamental new mental representations and mental operations. Those aren’t owned by any company, they’re patterns owned by humanity.
 
@@ -817,7 +817,7 @@ We’re often asked: why don’t you work on AGI or BCI instead of tools for tho
 
 They certainly are important and exciting subjects. What’s more, at present AGI and BCI are far more fashionable (and better funded). As a reader, you may be rolling your eyes, supposing our thinking here is pre-determined: we wouldn’t be writing this essay if we didn’t favor work on tools for thought. But these are questions we’ve wrestled hard with in deciding how to spend our own lives. One of us wrote a book about artificial intelligence before deciding to focus primarily on tools for thought; it was not a decision made lightly, and it’s one he revisits from time to time. Indeed, given the ongoing excitement about AGI and BCI, it would be surprising if people working on tools for thought didn’t regularly have a little voice inside their head saying “hey, shouldn’t you be over there instead?” Fashion is seductive.
 
-它们当然是重要而激动人心的主题。更重要的是，目前 AGI 和 BCI 正在风头上（而且资金支持更充足）。作为读者，你可能会翻白眼，认为我们立场有些先入为主：如果我们不赞成思想工具的工作，我们就不会写这篇文章。但我们在决定人生重心时，是经过再三琢磨才选择了思想工具的。我们中的一个人在把重心落在思想工具之前，也写了一本关于人工智能的书；这不是一个轻率的决定，而且不时还需要再次权衡。事实上，鉴于目前对AGI和BCI的热潮，从事思想工具研究的人经常有一个小声音在他们的头脑中说：「嘿，你不应该在去研究那些东西吗？」风潮很会引诱人。
+它们当然是重要而激动人心的主题。更重要的是，目前 AGI 和 BCI 正在风口上（而且资金支持更充足）。作为读者，你可能会翻白眼，认为我们立场有些先入为主：如果我们不赞成思想工具的工作，我们就不会写这篇文章。但我们在决定人生重心时，是经过再三琢磨才选择了思想工具的。我们中的一个人在把重心落在思想工具之前，也写了一本关于人工智能的书；这不是一个轻率的决定，而且不时还需要再次权衡。事实上，鉴于目前对 AGI 和 BCI 的热潮，从事思想工具研究的人经常有一个小声音在他们的头脑中说：「嘿，你不应该在去研究那些东西吗？」风潮很会引诱人。
 
 One striking difference is that AGI and BCI are based on relatively specific, well-defined goals. By contrast, work on tools for thought is much less clearly defined. For the most part we can’t point to well-defined, long-range goals; rather, we have long-range visions and aspirations, almost evocations. The work is really about exploration of an open-ended question: how can we develop tools that change and expand the range of thoughts human beings can think?
 
@@ -825,19 +825,19 @@ One striking difference is that AGI and BCI are based on relatively specific, we
 
 Culturally, tech is dominated by an engineering, goal-driven mindset. It’s much easier to set KPIs, evaluate OKRs, and manage deliverables, when you have a very specific end-goal in mind. And so it’s perhaps not surprising that tech culture is much more sympathetic to AGI and BCI as overall programs of work.
 
-从文化上讲，科技发展是由工程式、目标驱动的思维方式所主导的。有一个非常具体的目标，设置 KPI、评估 OKR 和管理交付物就容易得多。因此，科技文化更喜爱 AGI 和 BCI 这两个方向的现状，也许并不令人惊讶。
+从文化上讲，科技发展是由工程式、目标驱动的思维方式所主导的。有一个非常具体的目标，设置 KPI、评估 OKR 和管理交付产品就容易得多。因此，科技文化更喜爱 AGI 和 BCI 这两个方向的现状，也许并不令人惊讶。
 
 But historically it’s not the case that humanity’s biggest breakthroughs have come about in this goal-driven way. The creation of language – the ur tool for thought – is perhaps the most important occurrence of humanity’s existence. And although the origin of language is hotly debated and uncertain, it seems extremely unlikely to have been the result of a goal-driven process. It’s amusing to try imagining some prehistoric quarterly OKRs leading to the development of language. What sort of goals could one possibly set? Perhaps a quota of new irregular verbs? It’s inconceivable!
 
-但从历史上看，人类巨大的突破并不依靠目标驱动来实现。语言的创造——思维的工具——也许是人类历史上的最重要事件。尽管围绕语言起源的争论十分激烈，也没有定论，但它似乎极不可能是目标驱动下的产物。语言的发展是史前时期的某个季度 OKR？想想就很引人发笑。这样怎么设定目标？再发明一个新的不规则动词的配额？这是不可想象的！
+但从历史上看，人类巨大的突破并不依靠目标驱动来实现。语言的创造——原初的思想工具——也许是人类历史上的最重要事件。尽管围绕语言起源的争论十分激烈，也没有定论，但它似乎极不可能是目标驱动下的产物。语言的发展是史前时期的某个季度 OKR？想想就很引人发笑。这样怎么设定目标？再发明一个新的不规则动词的配额？这是不可想象的！
 
 Similarly, the invention of other tools for thought – writing, the printing press, and so on – are among our greatest ever breakthroughs. And, as far as we know, all emerged primarily out of open-ended exploration, not in a primarily goal-driven way. Even the computer itself came out of an exploration that would be regarded as ridiculously speculative and poorly-defined in tech today. Someone didn’t sit down and think “I need to invent the computer”; that’s not a thought they had any frame of reference for. Rather, pioneers such as Alan Turing and Alonzo Church were exploring extremely basic and fundamental (and seemingly esoteric) questions about logic, mathematics, and the nature of what is provable. Out of those explorations the idea of a computer emerged, after many years; it was a discovered concept, not a goal. Fundamental, open-ended questions seem to be at least as good a source of breakthroughs as goals, no matter how ambitious. This is difficult to imagine or convince others of in Silicon Valley’s goal-driven culture. Indeed, we ourselves feel the attraction of a goal-driven culture. But empirically open-ended exploration can be just as, or more successful.
 
-同样，发明其他思想工具的——写作、印刷术等等——也跻身于我们有史以来最伟大的突破。而且，据我们所知，所有这些发明都主要在开放式的探索下自然涌现，而不是在目标驱动下完成。即使是计算机本身也是在探索中产生的，然而这种探索对于今天的技术从业者会是可笑的投机，定义十分模糊。没人有会坐下来想着「我需要发明计算机」；这样的想法没有任何可供参考的框架。相反，像阿兰-图灵和阿隆佐-丘奇这样的先驱者得到发明时，正在围绕逻辑、数学、可证明性探索基本的问题，基于这些探索，计算机的概念出现了，虽然已经时隔多年；它是一个被发现的概念，而非一个目标。基本的、开放性的问题似乎至少和目标一样是突破的源泉，无论多么雄心勃勃。在硅谷的目标驱动文化中，这一点很难想象或说服他人接受。事实上，我们自己也感受到了目标驱动文化的吸引力。但是，根据经验进行的开放式探索也可以同样，甚至更成功。
+同样，发明其他思想工具的——写作、印刷术等等——也跻身于我们有史以来最伟大的突破。而且，据我们所知，所有这些发明都主要在开放式的探索下自然涌现，而不是在目标驱动下完成。即使是计算机本身也是在探索中产生的，然而这种探索对于今天的技术从业者会是可笑的投机，定义十分模糊。没人有会坐下来想着「我需要发明计算机」；这样的想法没有任何可供参考的框架。相反，像艾伦·图灵和 Alonzo Church 这样的先驱者得到发明时，正在围绕逻辑、数学、可证明性探索基本的问题，基于这些探索，计算机的概念出现了，虽然已经时隔多年；它是一个被发现的概念，而非一个目标。基本的、开放性的问题似乎至少和目标一样是突破的源泉，无论多么雄心勃勃。在硅谷的目标驱动文化中，这一点很难想象或说服他人接受。事实上，我们自己也感受到了目标驱动文化的吸引力。但是，根据经验进行的开放式探索也可以同样，甚至更成功。
 
 “What will new tools for thought be like?” is a question we hear often. And yet, almost by definition, we cannot say. As we noted earlier, if we could communicate the experience in an essay, then the tools would be failing at their job; they would not be transforming a person’s thinking, or even their consciousness. Concretely: to understand the mnemonic medium you must use it intensively over an extended period. And even then you may not be conscious of the effect; we’ve done interviews with users who are apparently unaware of the incredible level of recall they have of material in the essay they have read. One of the most famous papers in the philosophy of consciousness is entitled “What is it like to be a bat?” Each tool for thought poses a similar question, near impossible to answer without immersion in the tool: “What is it like to be a language user? A musician?” and so on.
 
-「新的思想工具会是什么样的？」这是我们经常听到的一个问题。然而，根据定义，我们说不出来。正如我们前面所指出的，如果我们仅靠文字描述就能传达工具的使用经验，那么这些工具将是失败的；它们没能改变一个人的思维，甚至是他们的意识。具体来说：要理解助记媒介，你必须在很长一段时间内高强度地使用它。即使如此，你也可能没有意识到这种效果；我们曾经采访过一些思想工具使用者，他们显然没有意识到他们对所读文章中的材料有令人难以置信的记忆水平。意识哲学中最著名的论文之一题为「做一只蝙蝠是什么感觉？」每个思想工具都提出了一个类似的问题，如果不沉浸在这个工具中，几乎不可能回答，就像「作为一个语言使用者是什么样子的？音乐家？」等等。
+「新的思想工具会是什么样的？」这是我们经常听到的一个问题。然而，根据定义，我们说不出来。正如我们前面所指出的，如果我们仅靠文字描述就能传达工具的使用经验，那么这些工具将是失败的；它们没能改变一个人的思维，甚至是他们的意识。具体来说：要理解助记媒介，你必须在很长一段时间内高强度地使用它。即使如此，你也可能没有意识到这种效果；我们曾经采访过一些思想工具使用者，他们显然没有意识到他们对所读文章中的材料有令人难以置信的记忆水平。意识哲学中最著名的论文之一题为「做一只蝙蝠是什么感觉？」每个思想工具都提出了一个类似的问题，如果不沉浸在这个工具中，几乎不可能回答，就像「作为一个语言使用者是什么样子的？作为音乐家呢？」等等。
 
 It seems plausible to us that work on tools for thought will be, over the next few decades, more important than work on AGI and BCI. And, given how fashionable and well-funded work on AGI and BCI currently is, it seems nearly certain that work on tools for thought offers vastly greater benefit, at the margin.
 
@@ -845,7 +845,7 @@ It seems plausible to us that work on tools for thought will be, over the next f
 
 What about the longer term? There, the situation is less clear. It seems likely that the three fields will merge, or at least feed strongly into one another. Together with Shan Carter, one of us has argued that one of the most promising applications for AI is as a way of discovering new tools for thought[^34].
 
-那么长期的情况呢？在这方面，情况不太清楚。这三个领域似乎很可能会合并，或者至少是彼此紧密联系在一起。我们中的一个人与 Shan Carter 同样认为，人工智能最有前景的应用之一是发现新的思想工具[^34]
+那么长期的情况呢？在这方面，情况不太清楚。这三个领域似乎很可能会合并，或者至少是彼此紧密联系在一起。我们中的一人与 Shan Carter 同样认为，人工智能最有前景的应用之一是发现新的思想工具[^34]
 
 BCI seems likely to be even more closely related. BCI is sometimes described using ideas like a memory chip for long-term memories, or some way of increasing short-term working memory. Such ideas may well become important. But it also seems possible that BCIs will be used to enable new mental operations, new mental representations, and new affordances for thought; in short, the same kind of things as are involved in developing non-BCI tools for thought. Perhaps we’ll develop the capacity to directly imagine ourselves in 4 or 5 or more dimensions; or traversing a Riemann manifold; or the ability to have multiple tracks of conscious attention. These are about changing the interface for thought, the basic abstractions and operations which are allowed. And so it seems plausible that work today on tools for thought will directly impact the way we use BCIs in the future.
 
