--- a/Essays/我们如何才能开发出变革性的思想工具？.md
+++ b/Essays/我们如何才能开发出变革性的思想工具？.md
@@ -8,7 +8,7 @@ October 2019
 
 Part of the origin myth of modern computing is the story of a golden age in the 1960s and 1970s. In this story, visionary pioneers pursued a dream in which computers enabled powerful tools for thought, that is, tools to augment human intelligence[^1]. One of those pioneers, Alan Kay, summed up the optimism of this dream when he wrote of the potential of the personal computer: “the very use of it would actually change the thought patterns of an entire civilization”[^2].
 
-谈起关于计算机起源的那些神话，常会提到被称为「黄金年代」的上世纪 60 年代与 70 年代。在那段时间里，许多高瞻远瞩的开拓者都在追逐同一个梦想，即让计算机承载强大的思想工具，也就是能增强人类智力的工具[^1]。这些开拓者中的一位，Alan Key，在阐述个人电脑的潜力时，总结了他们对这个梦想的乐观愿景：「它（计算机）的使用将会改变整个文明的思想模式」[^2]。
+谈起关于计算机起源的那些神话，常会提到被称为「黄金年代」的上世纪 60 年代与 70 年代。在那段时间里，许多高瞻远瞩的开拓者都在追逐同一个梦想，即让计算机承载强大的思想工具，也就是能增强人类智力的工具[^1]。这些开拓者中的一位，Alan Kay，在阐述个人电脑的潜力时，总结了他们对这个梦想的乐观愿景：「它（计算机）的使用将会改变整个文明的思想模式」[^2]。
 
 It’s an inspiring dream, which helped lead to modern interactive graphics, windowing interfaces, word processors, and much else. But retrospectively it’s difficult not to be disappointed, to feel that computers have not yet been nearly as transformative as far older tools for thought, such as language and writing. Today, it’s common in technology circles to pay lip service to the pioneering dreams of the past. But nostalgia aside there is little determined effort to pursue the vision of transformative new tools for thought.
 
