校对 记忆到底有多重要？到 Part II 之前

--- a/Essays/我们如何才能开发出变革性的思想工具？.md
+++ b/Essays/我们如何才能开发出变革性的思想工具？.md
@@ -385,39 +385,39 @@ All this makes us seem negative about mnemonic techniques. In fact, we’re enth
 
 People tend to fall into two buckets when told of the mnemonic medium. One group is fascinated by the idea, and wants to try it out. The second group is skeptical or even repulsed. In caricature, they say: “Why should I care about memory? I want deeper kinds of understanding! Can’t I just look stuff up on the internet? I want creativity! I want conceptual understanding! I want to know how to solve important problems! Only dull, detail-obsessed grinds focus on rote memory.”
 
-当被告知有助记媒介时，人们往往分为两类。一类人对这个想法很着迷，并想尝试一下。第二类人则持怀疑态度，甚至是排斥。以漫画的形式，他们说：「我为什么要关心记忆？我想要更深层次的理解！我不能直接查资料吗？我就不能在互联网上查查资料吗？我想要创造力！我想要概念性的理解！」。我想要概念性的理解! 我想知道如何解决重要的问题！只有沉闷的、痴迷于细节的磨练才会专注于死记硬背。"
+当被告知有助记媒介时，人们往往分为两类。一类人对这个想法很着迷，并想尝试一下。第二类人则持怀疑态度，甚至是排斥。以漫画的形式，他们说：「我为什么要关心记忆？我想要更深层次的理解！我难道就不能在互联网上查查资料吗？我想要创造力！我想要概念性的理解！我想知道如何解决重要的问题！只有痴迷于细节、枯燥乏味的人才会专注于死记硬背。」
 
 It’s worth thinking hard about such objections. To develop the best possible memory system we need to understand and address the underlying concerns. In part, this means digging down far enough to identify the mistaken or superficial parts of these concerns. It also means distilling as sharply as possible the truth in the concerns. Doing both will help us improve and go beyond the current prototype mnemonic medium.
 
-对于这样的反对意见，我们值得认真思考。为了开发最好的记忆系统，我们需要理解并解决潜在的担忧。在某种程度上，这意味着要深入挖掘，找出这些担忧中错误的或肤浅的部分。这也意味着要尽可能清晰地提炼出这些担忧中的真相。做到这两点将有助于我们改进和超越目前的原型助记媒介。
+这些反对意见，值得我们认真思考。为了开发最好的记忆系统，我们需要理解并解决潜在的担忧。在某种程度上，这意味着要深入挖掘，找出这些担忧中错误的或肤浅的部分。这也意味着要尽可能清晰地提炼出这些担忧中的真理。做到这两点将有助于我们改进和超越目前的原型助记媒介。
 
 One response to such objections is the argument from lived experience. In the past, one of us (MN) has often helped students learn technical subjects such as quantum mechanics. He noticed that people often think they’re getting stuck on esoteric, complex issues. But, as suggested in the introduction to this essay, often what’s really going on is that they’re having a hard time with basic notation and terminology. It’s difficult to understand quantum mechanics when you’re unclear about every third word or piece of notation. Every sentence is a struggle.
 
-对这种反对意见的一个回应是生活经验的论证。过去，本文的一位作者（MN）经常帮助学生学习技术科目，如量子力学。他注意到，人们常常认为自己在深奥、复杂的问题上卡壳。但是，正如这篇文章的引言中所提出的，往往真正的情况是他们对基本的符号和术语感到为难。当你对每三个单词或符号不清楚时，就很难理解量子力学。每一句话都是一种挣扎。
+对这种反对意见的一个回应是生活经验的论证。过去，本文的一位作者（MN）经常帮助学生学习技术科目，如量子力学。他注意到，人们常常认为自己在深奥、复杂的问题上卡壳。但是，正如这篇文章的引言中所提出的，真正的情况往往是他们在基本的符号和术语上遇到的困难。当你对每三个单词或符号都不清楚时，就很难理解量子力学。对每一句话都疲于应付。
 
 It’s like they’re trying to compose a beautiful sonnet in French, but only know 200 words of French. They’re frustrated and think the trouble is the difficulty of finding a good theme, striking sentiments and images, and so on. But really the issue is that they have only 200 words with which to compose.
 
 这就像他们试图用法语创作一首美丽的十四行诗，但只知道 200 个法语单词。他们很沮丧，认为麻烦在于难以找到一个好的主题、引人注目的情感和形象，等等。但实际上，问题在于他们只有 200 个单词可以用来创作。
 
-At the time, MN’s somewhat self-satisfied belief was that if people only focused more on remembering the basics, and worried less about the “difficult” high-level issues, they’d find the high-level issues took care of themselves. What he didn’t realize is that this also applied to him. When he began using the memory system Anki to read papers in new fields, he found it almost unsettling how much easier Anki made learning the basics of such subjects. And it made him start wondering if memory was often a binding constraint in learning new fieldsSee [here](http://augmentingcognition.com/ltm.html) and [here](http://cognitivemedium.com/srs-mathematics) for more on learning new fields using Anki[^20].
+At the time, MN’s somewhat self-satisfied belief was that if people only focused more on remembering the basics, and worried less about the “difficult” high-level issues, they’d find the high-level issues took care of themselves. What he didn’t realize is that this also applied to him. When he began using the memory system Anki to read papers in new fields, he found it almost unsettling how much easier Anki made learning the basics of such subjects. And it made him start wondering if memory was often a binding constraint in learning new fields[^20].
 
-当时，MN 有点自以为是地认为，如果人们只专注于记住基础知识，而少担心那些 「困难的 」高层次问题，他们会发现高层次问题会自己解决的。他没有意识到，这也适用于他。当他开始使用记忆系统 Anki 来阅读新领域的论文时，他发现 Anki 使学习这些学科的基础知识变得非常容易，这几乎让他感到不安。这让他开始怀疑，在学习新领域的过程中，记忆是否经常是一种约束性的制约因素。见[这里](http://augmentingcognition.com/ltm.html) 和[这里](http://cognitivemedium.com/srs-mathematics) 了解更多关于使用 Anki 学习新领域的情况。
+当时，MN 有点自以为是地认为，如果人们只专注于记住基础知识，而少担心那些 「困难的 」高层次问题，他们会发现高层次问题会自己解决的。他没有意识到，这也适用于他。当他开始使用记忆系统 Anki 来阅读新领域的论文时，他发现 Anki 使学习这些学科的基础知识变得非常容易，这几乎让他感到不安。这让他开始怀疑，在学习新领域的过程中，记忆是否经常是一种约束性的制约因素[^20]。
 
 One particularly common negative response to the mnemonic medium is that people don’t want to remember “unimportant details”, and are just looking for “a broad, conceptual understanding”. It’s difficult to know what to make of this argument. Bluntly, it seems likely that such people are fooling themselves, confusing a sense of enjoyment with any sort of durable understanding.
 
-对助记媒介的一个特别常见的负面反应是，人们不想记住 「不重要的细节」，而只是在寻找 「一个广泛的、概念性的理解」。很难知道该如何理解这种说法。直截了当地说，这样的人似乎是在愚弄自己，把享受的感觉和任何一种持久的理解混为一谈。
+对助记媒介的一个特别常见的负面反应是，人们不想记住 「不重要的细节」，而只是在寻找 「一个广泛的、概念性的理解」。很难理解这种说法。直截了当地说，这种人似乎是在自欺欺人，把享受的感觉和任何一种持久的理解混为一谈。
 
 Imagine meeting a person who told you they “had a broad conceptual understanding” of how to speak French, but it turned out they didn’t know the meaning of “bonjour”, “au revoir”, or “tres bien”. You’d think their claim to have a broad conceptual understanding of French was hilarious. If you want to understand a subject in any real sense you need to know the details of the fundamentals. What’s more, that means not just knowing them immediately after reading. It means internalizing them for the long term[^21].
 
-想象一下，如果遇到一个人告诉你，他们对如何说法语有 「广泛的概念性理解」，但事实证明，他们不知道 「bonjour」、「au revoir 」或 「tres bien 」的意思。你会觉得他们自称对法语有广泛的概念性理解是很搞笑的。如果你想在任何真正意义上理解一个主题，你需要知道基本原理的细节。更重要的是，这意味着不仅仅是在阅读后立即了解它们。这意味着长期内化它们。
+想象一下，如果遇到一个人告诉你，他们对如何说法语有 「广泛的概念性理解」，但事实证明，他们不知道 「bonjour」、「au revoir 」或 「tres bien 」的意思。你会觉得他们自称对法语有广泛的概念性理解是很搞笑的。如果你想在任何真正意义上理解一个主题，你需要知道基本原理的细节。更重要的是，这意味着不仅仅是在阅读后立即了解它们。这意味着长期内化它们[^21]。
 
 A better model is that conceptual mastery is actually enabled by a mastery of details. One user of *Quantum Country* told us that she found the experience of reading unexpectedly relaxing, because she “no longer had to worry” about whether she would remember the content. She simply trusted that the medium itself would ensure that she did. And she reported that she was instead able to spend more of her time on conceptual issues.
 
-一个更好的模式是，概念的掌握实际上是由对细节的掌握促成的。一位 「量子国度」 的用户告诉我们，她发现阅读的体验出乎意料地轻松，因为她 「不再需要担心」 她是否会记住内容。她只是相信媒介本身会确保她记得。她报告说，她反而能够把更多的时间花在概念性问题上。
+一个更好的模型是，概念的掌握实际上是由对细节的掌握促成的。一位「量子国度」的用户告诉我们，她发现阅读的体验出乎意料地轻松，因为她「不再需要担心」她是否会记住内容。她只是相信媒介本身会确保她记得。她报告说，她反而能够把更多的时间花在概念性问题上。
 
 When people respond to the mnemonic medium with “why do you focus on all that boring memory stuff?”, they are missing the point. By largely automating away the problem of memory, the mnemonic medium makes it easier for people to spend more time focusing on other parts of learning, such as conceptual issues.
 
-当人们用 「你为什么要关注那些无聊的记忆东西？」来回应助记媒介时，他们没有抓住重点。通过在很大程度上将记忆问题自动化，助记媒介使人们更容易将更多的时间集中在学习的其他部分，如概念问题。
+当人们用「你为什么要关注那些无聊的记忆材料？」来回应助记媒介时，他们没有抓住重点。通过在很大程度上将记忆问题自动化，助记媒介使人们更容易将更多的时间集中在学习的其他部分，如概念问题。
 
 Another common argument against spaced repetition systems is that it’s better to rely on natural repetition. For instance, if you’re learning a programming language, the argument goes, you shouldn’t memorize every detail of that language. Instead, as you use the language in real projects you’ll naturally repeatedly use, and eventually commit to memory, those parts of the language most important to learn.
 
@@ -425,31 +425,31 @@ Another common argument against spaced repetition systems is that it’s better 
 
 There are important partial truths in this. It is good to use what you’re learning as part of your creative projects. Indeed, an ideal memory system might help that happen, prompting you as you work, rather than in an artificial card-based environment. Furthermore, a common failure mode with memory systems is that people attempt to memorize things they’re unlikely to ever have any use for. For instance, it’s no good (but surprisingly common) for someone to memorize lots of details of a programming language they plan to use for just one small project. Or to memorize details “just in case” they ever need them. These patterns are mistakes.
 
-这里面有重要的局部真理。把你所学的东西作为你创造性项目的一部分是很好的。事实上，一个理想的记忆系统可能有助于这种情况的发生，在你工作时提示你，而不是在一个基于卡片的人工环境中。此外，记忆系统的一个常见失败模式是，人们试图记住他们不太可能有任何用途的东西。例如，一个人背了很多他们打算在一个小项目中使用的编程语言的细节，这是不可取的（但令人惊讶的是，这很常见）。或者记住一些细节，「以备不时之需」。这些模式是错误的。
+这里面有一些重要的部分真理。把你所学的东西作为你创造性项目的一部分是很好的。事实上，一个理想的记忆系统可能有助于这种情况的发生，在你工作时提示你，而不是在一个基于卡片的人工环境中。此外，记忆系统的一个常见失败模式是，人们试图记住他们不太可能有任何用途的东西。例如，一个人背了很多他们打算在一个小项目中使用的编程语言的细节，这是不可取的（但令人惊讶的是，这很常见）。或者记住一些细节，「以备不时之需」。这些模式是错误的。
 
 But the truths of the last paragraph also have limits. If you’re learning French, but don’t know any French speakers, then waiting for “natural opportunities” to speak just won’t work. And even if you do have (or create) opportunities to speak, it’s desirable to accelerate the awkward, uncomfortable early stages that form such a barrier to using the language.
 
-但上一段的真理也有局限性。如果你正在学习法语，但不认识任何讲法语的人，那么等待 「自然机会」 说话是行不通的。而且，即使你有（或创造）说话的机会，最好也能加快尴尬的、不舒服的早期阶段，这对使用语言形成了很大的障碍。
+但上一段的真理也有局限性。如果你正在学习法语，但不认识任何讲法语的人，那么等待「自然机会」说话是行不通的。而且，即使你有（或创造）说话的机会，最好也能加快度过尴尬的、不舒服的早期阶段，这些阶段对使用语言形成了很大的障碍。
 
 It’s in this phase that memory systems shine. They can accelerate people through the awkward early stages of learning a subject. Ideally, they’ll support and enable work on creative projects. For this to work well takes good heuristics for what any given person should commit to memory; what is good for one person to memorize may be bad for another. Working such heuristics out is an ongoing challenge in the design of memory systems.
 
-正是在这个阶段，记忆系统大放异彩。它们可以加速人们度过学习一个科目的尴尬的早期阶段。理想情况下，它们会支持和促成创造性项目的工作。要使这一工作顺利进行，需要对任何特定的人应该记忆的内容进行良好的启发式分析；对一个人来说，适合记忆的内容可能对另一个人来说是不好的。在记忆系统的设计中，解决这种启发式方法是一个持续的挑战。
+正是在这个阶段，记忆系统大放异彩。它们可以让人们加速度过学习一个科目的尴尬的早期阶段。理想情况下，它们会支持和促成创造性项目的工作。要使这一工作顺利进行，需要对任何特定的人应该记忆的内容进行良好的启发式分析；对一个人来说，适合记忆的内容可能对另一个人来说是不好的。在记忆系统的设计中，解决这种启发式方法是一个持续的挑战。
 
 (Incidentally, a surprising number of people say they are “repulsed”, or some similarly strong word, by spaced-repetition memory systems. Their line of argument is usually some variant on: it is claimed that spaced-repetition systems help with memory; if that is true I *must* use the systems; but I hate using the systems. The response is to deny the first step of the argument. Of course, the mistake is elsewhere: there is absolutely no reason anyone “should” use such systems, even if they help with memory. Someone who hates using them should simply choose not to do so. Using memory systems is not a moral imperative!)
 
-（顺便提一下，有很多人说他们对间隔重复记忆系统感到 「厌恶」，或者用一些类似的强烈字眼。他们的论点通常是：据说间隔重复系统有助于记忆；如果这是真的，我*必须*使用这些系统；但我讨厌使用这些系统。他们的反应是否认论证的第一步。当然，错误在其他地方：绝对没有理由任何人 「应该」 使用这种系统，即使它们对记忆有帮助。讨厌使用它们的人应该简单地选择不这样做。使用记忆系统并不是一种道德上的要求！)
+（顺便提一下，有很多人说他们对间隔重复记忆系统感到「厌恶」，或者用一些类似的强烈字眼。他们的论点通常是：据说间隔重复系统有助于记忆；如果这是真的，我*必须*使用这些系统；但我讨厌使用这些系统。他们的反应是否认论证的第一步。当然，错误在其他地方：绝对没有理由任何人 「应该」 使用这种系统，即使它们对记忆有帮助。讨厌使用它们的人应该简单地选择不这样做。使用记忆系统并不是一种道德上的要求！)
 
 An immense amount of research has been done on the relationship of memory to mastery. Much of this research is detailed and context specific. But at the level of broader conclusions, one especially interesting series of studies was done in the 1970s by Herbert Simon and his collaborators. They studied chess players, and discovered that when master chess players look at a position in chess they don’t see it in terms of the individual pieces, a rook here, a pawn there. Instead, over years of playing and analyzing games the players learn to recognize somewhere between 25,000 and 100,000 patterns of chess pieces. These much more elaborate “chunks” are combinations of pieces that the players perceive as a unity, and are able to reason about at a higher level of abstraction than the individual pieces. At least in part it’s the ability to recognize and reason about these chunks which made their gameplay so much better than novices. Furthermore, although Simon did this work in the context of chess, subsequent studies have found [similar results](https://en.wikipedia.org/wiki/Chunking_(psychology)) in other areas of expertise[^23]. It seems plausible, though needs further study, that the mnemonic medium can help speed up the acquisition of such chunks, and so the acquisition of mastery.
 
-关于记忆与掌握的关系，已经有了大量的研究。这些研究中的大部分都是详细的、针对具体环境的。但是在更广泛的结论层面上，有一个特别有趣的系列研究是由赫伯特-西蒙和他的合作者在1970年代完成的。他们研究了国际象棋选手，并发现[^22]当国际象棋高手看国际象棋的局面时，他们不会从单个棋子的角度来看，这里有车，那里有兵。相反，在多年的对局和分析中，棋手们学会了识别25,000到100,000个棋子的模式。这些更复杂的 「组块」 是棋子的组合，棋手认为它们是一个整体，并且能够在比单个棋子更高的抽象水平上进行推理。至少在某种程度上，正是认识和推理这些棋子的能力使他们的棋艺比新手好得多。此外，尽管西蒙是在国际象棋的背景下做的这项工作，但随后的研究在其他专业领域也发现了[类似的结果](https://en.wikipedia.org/wiki/Chunking_(psychology))。虽然需要进一步研究，但似乎是有道理的，助记媒介可以帮助加速获得这些大块的内容，从而获得掌握。
+关于记忆与掌握的关系，已经有了大量的研究。这些研究中的大部分都是详细的、针对具体环境的。但是在更广泛的结论层面上，有一个特别有趣的系列研究是由 Herbert Simon 和他的合作者在 1970 年代完成的。他们研究了国际象棋选手，并发现当国际象棋高手看国际象棋的局面时，他们不会从单个棋子的角度来看，这里有车，那里有兵。相反，在多年的对局和分析中，棋手们学会了识别 25,000 到 100,000 种棋子的模式。这些更复杂的 「组块」 是棋子的组合，棋手认为它们是一个整体，并且能够在比单个棋子更高的抽象水平上进行推理。至少在某种程度上，正是认识和推理这些棋子的能力使他们的棋艺比新手好得多。此外，尽管西蒙是在国际象棋的背景下做的这项工作，但随后的研究在其他专业领域也发现了[类似的结果](https://en.wikipedia.org/wiki/Chunking_(psychology))[^22]。虽然需要进一步研究，但似乎是有道理的，助记媒介可以帮助加速获得这些组块的内容，从而获得掌握。
 
 So, does all this mean we’re fans of rote memory, the kind of forced memorization common schools?
 
-那么，这一切是否意味着我们是死记硬背的粉丝，是普通学校那种强迫性的记忆？
+那么，这一切是否意味着我们是死记硬背的粉丝，就像普通学校里那种强迫的记忆？
 
 Of course not. What we do believe is that many people’s dislike of rote memorization has led them to a generalized dislike of memory, and consequently to underrate the role it plays in cognition. Memory is, in fact, a central part of cognition. But the right response to this is not immense amounts of dreary rote memorization. Rather, it’s to use good tools and good judgment to memorize what truly matters.
 
-当然不是。我们相信的是，许多人不喜欢死记硬背，导致他们普遍不喜欢记忆，并因此低估了记忆在认知中的作用。事实上，记忆是认知的一个核心部分。但正确的反应不是大量沉闷的死记硬背。相反，它是使用良好的工具和良好的判断力来记忆真正重要的东西。
+当然不是。我们相信，许多人不喜欢死记硬背，这导致他们普遍不喜欢记忆，并因此低估了记忆在认知中的作用。事实上，记忆是认知的一个核心部分。但正确的回应不是大量沉闷的死记硬背。相反，要用好的工具和好的判断来记住真正重要的东西。
 
 We’ve identified some ways in which criticisms of memory systems are mistaken or miss the point. But what about the ways in which those criticisms are insightful? What are the shortcomings of memory systems? In what ways should we be wary of them?
 
@@ -460,26 +460,22 @@ We’ve already implicitly mentioned a few points in this vein. Think about prob
 我们已经隐约提到了这一思路的几个要点。思考一些问题，比如需要避免孤立问题。或者确保用户不只是学习问题的表面特征。这些都是记忆系统可能失败的方式，如果使用不当的话。这里还有几个关于记忆系统的关键问题。
 
 - Memory systems don’t make it easy to decide what to memorize: Most obviously, we meet a lot of people who use memory systems for poorly chosen purposes. The following is surprisingly close to a transcript of a conversation we’ve both had many times:
-
- > “I don’t like [memory system]. I tried to memorize the countries in Africa, and it was boring.”
- > “Why were you trying to remember the countries in Africa?”
- > [blank look of confusion.]
-
- It’s easy to poke fun at this kind of thing. But we’ve both done the equivalent in our own memory practices. Even some users of *Quantum Country* seem to be going through the motions out of some misplaced sense of duty. The question “what will be beneficial to memorize” is fundamental, and answering that question well is not trivial.
+   > “I don’t like [memory system]. I tried to memorize the countries in Africa, and it was boring.”
+   > “Why were you trying to remember the countries in Africa?”
+   > [blank look of confusion.]
+  
+  It’s easy to poke fun at this kind of thing. But we’ve both done the equivalent in our own memory practices. Even some users of *Quantum Country* seem to be going through the motions out of some misplaced sense of duty. The question “what will be beneficial to memorize” is fundamental, and answering that question well is not trivial.
 
 - 记忆系统并不容易决定要记忆什么：最明显的是，我们遇到很多人把记忆系统用于选择不当的目的。下面的内容出乎意料地接近于我们俩多次谈话的记录：
-
- > 「我不喜欢[记忆系统]。我试图记住非洲的国家，这很无聊。」
- > 「你为什么想记住非洲的国家？」
- > [茫然的疑惑表情] 。
-
- 取笑这种事情很容易。但我们都在自己的记忆实践中做过类似的事情。甚至一些 「量子国度」 的用户似乎也是出于某种错位的责任感而走过场。「记忆什么会有好处」 这个问题是最基本的，而很好地回答这个问题并不是小事。
-
+   > 「我不喜欢[记忆系统]。我试图记住非洲的国家，这很无聊。」
+   > 「你为什么想记住非洲的国家？」
+   > [茫然的疑惑表情。] 
+  
+   取笑这种事情很容易。但我们都在自己的记忆实践中做过类似的事情。甚至一些「量子国度」的用户似乎也是出于某种错位的责任感而走过场。「记忆什么会有好处」 这个问题是最基本的，而回答好这个问题也不是无关紧要的。
+   
 - **What’s the real impact of the mnemonic medium on people’s cognition? How does it change people’s behavior?** A famous boxer is supposed to have said that everyone has a plan until they get punched in the face. Regular users of memory systems sometimes report that while they can remembers answers when being tested by their system, that doesn’t mean they can recall them when they really need them. There can be a tip-of-the-tongue feeling of “Oh, I know this”, but not actual recall, much less the fluent facility one ultimately wants for effective action. Furthermore, the user may not even recognize opportunities to use what they have learned. More broadly: memory is not an end-goal in itself. It’s embedded in a larger context: things like creative problem-solving, problem-finding, and all the many ways there are of taking action in the world. We suspect the impact of memory systems will vary a lot, depending on their design. They may be used as crutches for people to lean on. Or they may be used to greatly enable people to develop other parts of their cognition. We don’t yet understand very well how to ensure they’re enablers, rather than crutches. But later in the essay we’ll describe some other tools for thought that, when integrated with memory systems, may better enable this transition to more effective action.
 
-- **助记媒介对人们的认知有什么真正的影响？它是如何改变人们的行为的？**一位著名的拳击手应该说过，每个人都有一个计划，直到他们被打脸。记忆系统的普通用户有时会报告说，虽然他们在接受系统测试时能记住答案，但这并不意味着他们在真正需要时能想起这些答案。可能会有一种 「哦，我知道这个 」的舌尖上的感觉，但不是真正的回忆，更不是一个人最终想要的有效行动的流畅的设施。此外，用户甚至可能没有意识到使用他们所学的东西的机会。更广泛地说：记忆本身不是一个最终目标。它被嵌入到一个更大的背景中：如创造性地解决问题，寻找问题，以及在这个世界上采取行动的所有许多方式。我们怀疑记忆系统的影响会有很大的不同，取决于它们的设计。它们可能被用作人们依赖的拐杖。或者它们可能被用来大大地使人们能够发展他们认知的其他部分。我们还没有很好地理解如何确保它们是助推器，而不是拐杖。但在文章的后面，我们将描述一些其他的思想工具，当它们与记忆系统整合时，可能会更好地使这种过渡到更有效的行动。
-
-
+- **助记媒介对人们的认知有什么真正的影响？它是如何改变人们的行为的？**一位著名的拳击手应该说过，每个人都有一个计划，直到他们被打脸。经常使用记忆系统的用户有时会报告，虽然他们在接受系统测试时能记住答案，但这并不意味着他们在真正需要时能想起这些答案。可能会有一种 「哦，我知道这个 」的、停留在舌尖上的感觉，但不是真正的回忆，更不是一个人最终想要的有效行动的流利能力。此外，用户甚至可能没有意识到使用他们所学的东西的机会。更广泛地说：记忆本身不是一个最终目标。它被嵌入到一个更大的背景中：如创造性地解决问题，寻找问题，以及在这个世界上采取行动的所有许多方式。我们怀疑记忆系统的影响会有很大的不同，取决于它们的设计。它们可能被用作人们依赖的拐杖。或者它们可能被用来大大地使人们能够发展他们认知的其他部分。我们还没有很好地理解如何确保它们是助推器，而不是拐杖。但在文章的后面，我们将描述一些其他的思想工具，当它们与记忆系统整合时，可能会更好地使这种过渡到更有效的行动。
 
 ## How to invent Hindu-Arabic numerals?
 
@@ -495,11 +491,11 @@ How should you respond to this request? From our modern vantage point we know a 
 
 To be clear: this is a somewhat fanciful thought experiment. Many of the ideas needed to get to Hindu-Arabic numerals were, in fact, known earlier to the Babylonians, to the Greeks, and in other cultures. They were also inchoate in the abacus and similar devices. And so we’re not asking a literal historical question. Rather, it’s a question meant to stimulate thought: what *design process* could take you from Roman numerals to Hindu-Arabic numerals?
 
-要明确的是：这是一个有点虚幻的思想实验。事实上，印度-阿拉伯数字所需的许多想法早在巴比伦人、希腊人和其他文化中就已存在。它们在算盘和类似的设备中也是初现端倪。因此，我们不是在问一个字面上的历史问题。相反，这是一个旨在激发思考的问题：什么*设计过程*能让你从罗马数字到印度-阿拉伯数字？
+要明确的是：这是一个有点虚幻的思想实验。事实上，印度-阿拉伯数字所需的许多想法早在巴比伦人、希腊人和其他文化中就已存在。它们在算盘和类似的设备中也是初现端倪。因此，我们不是在问一个字面上的历史问题。相反，这是一个旨在激发思考的问题：什么**设计过程**能让你从罗马数字到印度-阿拉伯数字？
 
 We can’t know the answer to this question for sure. But it’s worth pointing out that the Hindu-Arabic numerals aren’t just an extraordinary piece of design. They’re also an extraordinary mathematical insight. They involve many non-obvious ideas, if all you know is Roman numerals. Perhaps most remarkably, the meaning of a numeral actually *changes*, depending on its position within a number. Also remarkable, consider that when we add the numbers 72 and 83 we at some point will likely use 2+3=5; similarly, when we add 27 and 38 we will also use 2+3=5, despite the fact that the meaning of 2 and 3 in the second sum is completely different than in the first sum. In modern user interface terms, the numerals have the same affordances, despite their meaning being very different in the two cases. We take this for granted, but this similarity in behavior is a consequence of deep facts about the number system: commutativity, associativity, and distributivity[^24]. All these properties (and many more) point to the design and mathematical insights being inextricably entangled: the mathematical insights are, in some sense, design insights, and vice versa.
 
-我们不能肯定地知道这个问题的答案。但值得指出的是，印度-阿拉伯数字不仅仅是一个非凡的设计。它们也是一个非凡的数学洞察力。如果你只知道罗马数字，它们涉及许多不显眼的想法。也许最引人注目的是，一个数字的含义实际上是*变化的*，这取决于它在一个数字中的位置。同样引人注目的是，考虑到当我们将数字72和83相加时，我们在某些时候可能会使用2+3=5；同样，当我们将27和38相加时，我们也会使用2+3=5，尽管事实上2和3在第二个和中的含义与第一个和完全不同。在现代用户界面术语中，尽管数字的含义在两种情况下有很大不同，但它们具有相同的承受力。我们认为这是理所当然的，但这种行为的相似性是数字系统的深层事实的结果：换元性、关联性和分布性。所有这些特性（以及更多的特性）都表明设计和数学的见解是不可分割地纠缠在一起的：在某种意义上，数学的见解就是设计的见解，反之亦然。
+我们不能肯定地知道这个问题的答案。但值得指出的是，印度-阿拉伯数字不仅仅是一个非凡的设计。它们也是一个非凡的数学洞察力。如果你只知道罗马数字，它们涉及许多不显眼的想法。也许最引人注目的是，一个数字的含义实际上是**变化的**，这取决于它在一个数字中的位置。同样引人注目的是，考虑到当我们将数字 72 和 83 相加时，我们在某些时候可能会使用 2+3=5；同样，当我们将 27 和 38 相加时，我们也会使用 2+3=5，尽管事实上 2 和 3 在第二个和中的含义与第一个和完全不同。在现代用户界面术语中，尽管数字的含义在两种情况下有很大不同，但它们具有相同的承受力。我们认为这是理所当然的，但这种行为的相似性是数字系统的深层事实的结果：换元性、关联性和分布性[^24]。所有这些特性（以及更多的特性）都表明设计和数学的见解是不可分割地纠缠在一起的：在某种意义上，数学的见解就是设计的见解，反之亦然。
 
 Indeed, it seems fair to say that any person who could invent Hindu-Arabic numerals, starting from the Roman numerals, would be both one of the great mathematical geniuses who ever lived, and one of the great design geniuses who ever lived. They’d have to be extraordinarily capable in both domains, capable of an insight-through-making loop which used the evolving system of numerals to improve not just their own mathematical ideas, but to have original, world-class insights into mathematics; and also to use those mathematical insights to improve their evolving system of numerals.
 
@@ -511,11 +507,11 @@ This is rather sobering if we compare to conventional modern design practice. In
 
 This is a powerful practice. At its best it causes systems to come into existence which would otherwise be inconceivable. If applied to Roman numerals (in hypothetical ancient Rome, not today[^25]) this practice would likely improve them a great deal. But it would not provide anywhere near the level of mathematical insight needed to arrive at Hindu-Arabic numerals.
 
-这是一个强大的实践。在最好的情况下，它可以使系统出现，否则就无法想象。如果应用于罗马数字（在假想的古罗马，而不是今天），这种做法可能会大大改善它们。但它不会提供任何接近印度-阿拉伯数字所需的数学洞察力水平。
+这是一个强大的实践。在最好的情况下，它可以使系统出现，否则就无法想象。如果应用于罗马数字（在假想的古罗马，而不是今天[^25]），这种做法可能会大大改善它们。但它不会提供任何接近印度-阿拉伯数字所需的数学洞察力水平。
 
 Our story about Hindu-Arabic numerals and mathematics is fanciful. But it expresses a general truth: *the most powerful tools for thought express deep insights into the underlying subject matter.* In the case of memory systems, this means they’re not just “applied cognitive science”, a collage of existing ideas from cognitive science pasted together using modern design practice. Rather, they will express deep original insights into memory, insights no-one else in the world has ever had. A truly great memory system will be cognitive science of the highest order.
 
-我们关于印度-阿拉伯数字和数学的故事是虚构的。但它表达了一个普遍的真理：*最强大的思想工具表达了对潜在主题的深刻见解。*就记忆系统而言，这意味着它们不仅仅是 「应用认知科学」，是用现代设计方法将认知科学的现有观点拼贴在一起。相反，它们将表达对记忆的深刻的原创性见解，这些见解是世界上其他任何人都不曾有过的。一个真正伟大的记忆系统将是最高等级的认知科学。
+我们关于印度-阿拉伯数字和数学的故事是虚构的。但它表达了一个普遍的真理：**最强大的思想工具表达了对潜在主题的深刻见解。**就记忆系统而言，这意味着它们不仅仅是「应用认知科学」，是用现代设计方法将认知科学的现有观点拼贴在一起。相反，它们将表达对记忆的深刻的原创性见解，这些见解是世界上其他任何人都不曾有过的。一个真正伟大的记忆系统将是最高等级的认知科学。
 
 From this discussion, we take away a warning and an aspiration.
 
@@ -533,11 +529,11 @@ The aspiration is for any team serious about making transformative tools for tho
 
 Note that we are not making the common argument that making new tools can lead to new subject matter insights for the toolmaker, and vice versa. This is correct, but is much weaker than what we are saying. Rather: making new tools can lead to new subject matter insights *for humanity as a whole* (i.e., significant original research insights), and vice versa, and this would ideally be a rapidly-turning loop to develop the most transformative tools.
 
-请注意，我们不是在做一个常见的论点，即制造新的工具可以为工具制造商带来新的主题见解，反之亦然。这是对的，但比我们说的要弱得多。相反，制造新的工具可以*为整个人类*带来新的主题见解（即重要的原创性研究见解），反之亦然，而这最好是一个快速转动的循环，以开发最具变革性的工具。
+请注意，我们不是在做一个常见的论点，即制造新的工具可以为工具制造商带来新的主题见解，反之亦然。这是对的，但比我们说的要弱得多。相反，制造新的工具可以**为整个人类**带来新的主题见解（即重要的原创性研究见解），反之亦然，而这最好是一个快速转动的循环，以开发最具变革性的工具。
 
 Doing this is a cultural struggle. It seems to be extraordinarily rare to find the insight-through-making loop working at full throttle. People with expertise on one side of the loop often have trouble perceiving (much less understanding and participating in) the nature of the work that goes on on the other side of the loop. You have researchers, brilliant in their domain, who think of making as something essentially trivial, “just a matter of implementation”. And you have makers who don’t understand research at all, who see it as merely a rather slow and dysfunctional (and unprofitable) making process. This is certainly true in Silicon Valley, where it’s common to meet accomplished technical makers who, after reading a few stories from Richard Hamming and Richard Feynman, think they understand research well enough that they can “create the new Bell Labs”. Usually they’re victims of Dunning-Krugeritis, so ignorant they’re not even aware of their ignorance.
 
-做到这一点是一场文化斗争。 在环路一侧拥有专业知识的人往往难以感知（更不用说理解和参与）环路另一侧的工作性质。你有研究人员，在他们的领域里很出色，但他们认为制造本质上是微不足道的，「只是一个实现的问题」。还有一些制造者根本不理解研究，他们认为研究只是一个相当缓慢和不正常的（而且不赚钱的）制造过程。在硅谷，这种情况是真实的。在那里，经常会遇到一些有成就的技术制造者，他们在读了 Richard Hamming 和 Richard Feynman 的一些故事后，认为他们对研究的理解足够深刻，可以 「创造新的贝尔实验室」。通常他们都是邓宁-克鲁格炎的受害者，他们如此无知，甚至没有意识到自己的无知。
+做到这一点是一场文化斗争。 在环路一侧拥有专业知识的人往往难以感知（更不用说理解和参与）环路另一侧的工作性质。你有研究人员，在他们的领域里很出色，但他们认为制造本质上是微不足道的，「只是一个实现的问题」。还有一些制造者根本不理解研究，他们认为研究只是一个相当缓慢和不正常的（而且不赚钱的）制造过程。在硅谷，这种情况是真实的。在那里，经常会遇到一些有成就的技术制造者，他们在读了 Richard Hamming 和 Richard Feynman 的一些故事后，认为他们对研究的理解足够深刻，可以 「创造新的贝尔实验室」。通常他们都是 Dunning-Krugeritis 的受害者，他们如此无知，甚至没有意识到自己的无知。
 
 Of course, we’ve got a long way to go with *Quantum Country*. It’s not yet generating nearly deep enough ideas about memory and cognition; it’s not yet one of the world’s foremost memory laboratories. And considered as a product, it’s also in the very earliest days; we’re not yet iterating nearly fast enough, nor learning nearly fast enough from the system. Getting the insight-through-making loop to operate at full throttle will mean reinventing parts of both research culture and conventional product development culture; it will mean new norms and a new type of person involved in key decision making. But that’s the aspiration, and what we believe is necessary to develop transformative tools for thought.
 
@@ -1111,7 +1107,7 @@ This work is licensed under a [Creative Commons Attribution 4.0 International Li
 
 [^19]: A small minority of the population does not possess a mind’s eye, and so cannot mentally visualize. This condition is known as [aphantasia](https://en.wikipedia.org/wiki/Aphantasia). One of us [asked on Twitter](https://twitter.com/michael_nielsen/status/1144281873197096961) if any aphantasics had tried using the method of loci, and if so how well it worked for them. The replies were remarkably heterogeneous (and striking), but most said such mnemonic techniques did not work for them. This deserves further study. 少数人不具备精神之眼，因此不能在精神上进行视觉化。这种情况被称为[象皮症](https://en.wikipedia.org/wiki/Aphantasia)。我们中的一个人[在 Twitter 上问](https://twitter.com/michael_nielsen/status/1144281873197096961)，是否有象皮症患者尝试过使用位置法，如果有，对他们来说效果如何。答复是非常不同的（和引人注目的），但大多数人说这种记忆技巧对他们不起作用。这值得进一步研究。
 
-[^20]: The last four paragraphs are adapted from [Augmenting Long-term Memory](http://augmentingcognition.com/ltm.html) (2018). 最后四段改编自[增强长期记忆](http://augmentingcognition.com/ltm.html) (2018)。
+[^20]: See [here](http://augmentingcognition.com/ltm.html) and [here](http://cognitivemedium.com/srs-mathematics) for more on learning new fields using Anki. The last four paragraphs are adapted from [Augmenting Long-term Memory](http://augmentingcognition.com/ltm.html) (2018). 见[这里](http://augmentingcognition.com/ltm.html)和[这里](http://cognitivemedium.com/srs-mathematics)了解更多关于使用 Anki 学习新领域的情况。最后四段改编自[增强长期记忆](http://augmentingcognition.com/ltm.html) (2018)。
 
 [^21]: The last two paragraphs are adapted from our forthcoming mnemonic essay: Andy Matuschak and Michael Nielsen, [How quantum teleportation works](https://quantum.country/teleportation) (2019). 最后两段改编自我们即将发表的助记文章。Andy Matuschak and Michael Nielsen，[量子传送如何运作](https://quantum.country/teleportation) (2019)。
 
